# manomotion

./: README.md
Safety_Kit/: CMakeLists.txt  DrawingUtils.cpp  DrawingUtils.hpp  Main_safety.cpp  Main_safety.h  build.sh  entry-linux.hpp  gpio.h  gpio_com.h  install.sh  mano_enums.h  public_structs.h  readme.md  remove.sh  run.sh  startup.sh  startup.sh.desktop  v4l2_helper.c
